--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ nav li{
 
 nav li a{
     text-decoration: none;
-    color: tomato;
+    color: lightseagreen;
     font-size: 18px;
     font-weight: 900;
 }
@@ -47,6 +47,11 @@ nav > div> img{
     width: 20%;
 }
 
+.active{
+    
+  color: orangered;
+}
+
 
 
              /* banner section */
@@ -54,7 +59,7 @@ nav > div> img{
  .hero-image {
     background-image: url(Images/Group\ 13\ \(1\)\ \(1\).png);
     background-color: #cccccc;
-    height: 400px;
+    height: 450px;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -66,10 +71,10 @@ nav > div> img{
 .hero-text {
     text-align: center;
     position: absolute;
-    top: 35%;
+    top: 40%;
     left: 50%;
     transform: translate(-50%, -50%);
-    color: whitesmoke;
+    color:lightyellow;
     filter: drop-shadow(10px 10px 20px black);
   }
 
@@ -84,7 +89,8 @@ nav > div> img{
 .button-body{
     
     font-size: 14px;
-    border-radius: 16px;
+    border-radius: 10px;
     padding: 10px 20px;
+    margin-right: 5px;
     cursor: pointer;
 }
