--- a/style.css
+++ b/style.css
@@ -88,9 +88,32 @@ nav > div> img{
 
 .button-body{
     
-    font-size: 14px;
+    font-size: 13px;
     border-radius: 10px;
     padding: 10px 20px;
     margin-right: 5px;
     cursor: pointer;
+}
+
+.image{
+    width: 400px;
+    height: 400px;
+    filter: drop-shadow(10px 10px 20px rgb(151, 144, 137));
+}
+
+.first{
+
+    display: flex;
+    background-color: rgb(247, 248, 245) ;
+    border-radius: 20px;
+}
+.two{
+
+    width: 100%;
+    padding-left: 11%;
+}
+
+.third{
+    width: 30%;
+    padding-right: 11%;   
 }
